assets/css/style.scss
---
---
@import "rouge-github";

@font-face {
  font-family: "Raleway";
  font-weight: normal;
  src: url('../fonts/raleway/Raleway-Regular.ttf') format('truetype');
}

@font-face {
  font-family: "Lato";
  font-weight: normal;
  src: url('../fonts/lato/lato-regular-webfont.woff2') format('woff2'),
       url('../fonts/lato/lato-regular-webfont.woff') format('woff'),
       url('../fonts/lato/lato-regular-webfont.ttf') format('truetype');
}

@font-face {
  font-family: "Lato";
  font-weight: bold;
  src: url('../fonts/lato/lato-bold-webfont.woff2') format('woff2'),
       url('../fonts/lato/lato-bold-webfont.woff') format('woff'),
       url('../fonts/lato/lato-bold-webfont.ttf') format('truetype');
}

$header-width: 125px;

body {
  background-color: #fff;
  padding:50px;
  font: 13px/1.5 "Lato";
  color:#727272;
  font-weight:400;
}

h1, h2, h3, h4, h5, h6 {
  color:#222;
  margin: 0 0 10px;
}

p, ul, ol, table, pre, dl {
  margin:0 0 10px;
}

h1, h2, h3 {
  line-height:1.1;
}

h1 {
  font-size:28px;
}

h2 {
  color:#393939;
}

h3, h4, h5, h6 {
  color:#494949;
}

header p {
  font-size: 8pt;
}

.plink {
  padding: 0px 1px;
}

#face {
  width: $header-width;
}

#info {
  width: $header-width;
}

#name {
  font-weight: bold;
  font-size: 16.5pt;
  -webkit-font-smoothing: antialiased;
}

a {
  color:#267CB9;
  text-decoration:none;
}

a:hover, a:focus {
  color:#069;
  font-weight: bold;
}

a small {
  font-size:11px;
  color:#777;
  margin-top:-0.3em;
  display:block;
}

a:hover small {
  color:#777;
}

.wrapper {
  width:550px;
  margin:0 auto;
}

blockquote {
  border-left:1px solid #e5e5e5;
  margin:0;
  padding:0 0 0 20px;
  font-style:italic;
}

code, pre {
  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
  color:#333;
}

pre {
  padding:8px 15px;
  background: #f8f8f8;
  border-radius:5px;
  border:1px solid #e5e5e5;
  overflow-x: auto;
}

table {
  width:100%;
  border-collapse:collapse;
}

th, td {
  text-align:left;
  padding:5px 10px;
  border-bottom:1px solid #e5e5e5;
}

dt {
  color:#444;
  font-weight:700;
}

th {
  color:#444;
}

img {
  max-width:100%;
}

header {
  width:$header-width;
  float:left;
  position:fixed;
  -webkit-font-smoothing:subpixel-antialiased;
}

strong {
  color:#222;
  font-weight:700;
}

section {
  width:400px;
  float:right;
  padding-bottom:50px;
}

small {
  font-size:8px;
}

hr {
  border:0;
  background:#e5e5e5;
  height:1px;
  margin:0 0 20px;
}

footer {
  width:$header-width;
  float:left;
  position:fixed;
  bottom:50px;
  -webkit-font-smoothing:subpixel-antialiased;
}

@media print, screen and (max-width: 650px) {
  // original max-width: 960px
  div.wrapper {
    width:auto;
    margin:0;
  }

  header, section, footer {
    float:none;
    position:static;
    width:auto;
  }

  header {
    // padding-right:320px;
  }

  section {
    // border:1px solid #e5e5e5;
    // border-width:1px 0;
    padding:20px 0;
    margin:0 0 20px;
  }

  header a small {
    display:inline;
  }

  header ul {
    position:absolute;
    right:50px;
    top:52px;
  }

  // original max-width: 720px
  body {
    word-wrap:break-word;
  }

  header {
    padding:0;
  }

  header ul, header p.view {
    position:static;
  }

  pre, code {
    word-wrap:normal;
  }
}

@media print, screen and (max-width: 480px) {
  body {
    padding:15px;
  }

  .downloads {
    width:99%;
  }

  .downloads li, .downloads li + li + li {
    width:33%;
  }
}

@media print {
  body {
    padding:0.4in;
    font-size:12pt;
    color:#444;
  }
}

